# deboog

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
deboog-derive/: Cargo.toml
deboog-derive/src/: lib.rs
src/: field.rs  lib.rs  masking.rs  tests.rs
tests/: basic.rs  equiv.rs  mask.rs  skip.rs
